--- a/index.html
+++ b/index.html
@@ -11,23 +11,151 @@
         <div class="first-half">
             <div>
                 <header>
-                    <h1>Header Logo</h1>
+                    <?xml version="1.0" ?><svg
+                        data-name="Layer 1"
+                        id="Layer_1"
+                        viewBox="0 0 500 500"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <defs>
+                            <style>
+                                .cls-1 {
+                                    fill: #faae3b;
+                                }
+                                .cls-2 {
+                                    fill: #ee3734;
+                                }
+                                .cls-3 {
+                                    opacity: 0.15;
+                                }
+                                .cls-4 {
+                                    fill: #513b2c;
+                                }
+                                .cls-5 {
+                                    fill: #fff;
+                                }
+                                .cls-6 {
+                                    fill: #b3814b;
+                                }
+                                .cls-7 {
+                                    fill: none;
+                                    stroke: #000;
+                                    stroke-linecap: round;
+                                    stroke-linejoin: round;
+                                    stroke-width: 20px;
+                                }
+                            </style>
+                        </defs>
+                        <title />
+                        <path
+                            class="cls-1"
+                            d="M360.62,93.33c1.11,18.72-33.87,73.85-33.87,73.85C305.59,76.87,192.91,10.68,192.91,10.68s26.67,31.6-30.1,124-31.29,150.15-31.29,150.15h0c12.3,44.84,62.05,78.42,121.64,78.42s104-36.12,121.64-78.42h.05C411.52,203.21,360.62,93.33,360.62,93.33Z" />
+                        <path
+                            class="cls-2"
+                            d="M201.59,311.38c0-29,51.16-88.94,51.16-88.94s51.15,60,51.15,88.94-22.9,52.48-51.15,52.48S201.59,340.37,201.59,311.38Z" />
+                        <path
+                            class="cls-3"
+                            d="M168.71,336.69c22.2,16.49,51.85,26.61,84.49,26.61,59.6,0,104-36.12,121.64-78.42h.05c36.63-81.67-14.27-191.55-14.27-191.55,1.11,18.72-33.87,73.85-33.87,73.85C305.59,76.87,192.91,10.68,192.91,10.68S438.82,258.17,168.71,336.69Z" />
+                        <ellipse
+                            class="cls-4"
+                            cx="55.48"
+                            cy="453.93"
+                            rx="22.06"
+                            ry="36.04"
+                            transform="translate(-107.9 26.8) rotate(-13.96)" />
+                        <path
+                            class="cls-5"
+                            d="M46,419.29c.27-.08.5-.26.78-.33l-.82.2Z" />
+                        <path
+                            class="cls-5"
+                            d="M63.36,489.11l.82-.2c-.28.07-.57,0-.85.07Z" />
+                        <path
+                            class="cls-6"
+                            d="M466.56,351.71a36,36,0,0,0-43.67-26.28L46.78,419c11.83-2.94,25.31,10.33,30.11,29.65S76,486,64.18,488.91l376.1-93.52A36,36,0,0,0,466.56,351.71Z" />
+                        <polygon
+                            class="cls-3"
+                            points="64.18 488.91 440.28 395.39 466.56 351.71 76.89 448.61 64.18 488.91" />
+                        <ellipse
+                            class="cls-4"
+                            cx="444.52"
+                            cy="453.93"
+                            rx="36.04"
+                            ry="22.06"
+                            transform="translate(-103.27 775.77) rotate(-76.04)" />
+                        <path
+                            class="cls-5"
+                            d="M454,419.29c-.27-.08-.5-.26-.78-.33l.82.2Z" />
+                        <path
+                            class="cls-5"
+                            d="M436.64,489.11l-.82-.2c.28.07.57,0,.85.07Z" />
+                        <path
+                            class="cls-6"
+                            d="M33.44,351.71a36,36,0,0,1,43.67-26.28L453.22,419c-11.83-2.94-25.31,10.33-30.11,29.65s.89,37.36,12.71,40.3L59.72,395.39A36,36,0,0,1,33.44,351.71Z" />
+                        <polygon
+                            class="cls-3"
+                            points="435.82 488.91 59.72 395.39 33.44 351.71 423.11 448.61 435.82 488.91" />
+                        <path
+                            class="cls-7"
+                            d="M360.62,93.33c1.11,18.72-33.87,73.85-33.87,73.85C305.59,76.87,192.91,10.68,192.91,10.68s26.67,31.6-30.1,124-31.29,150.15-31.29,150.15h0c12.3,44.84,62.05,78.42,121.64,78.42s104-36.12,121.64-78.42h.05C411.52,203.21,360.62,93.33,360.62,93.33Z" />
+                        <path
+                            class="cls-7"
+                            d="M201.59,311.38c0-29,51.16-88.94,51.16-88.94s51.15,60,51.15,88.94-22.9,52.48-51.15,52.48S201.59,340.37,201.59,311.38Z" />
+                        <ellipse
+                            class="cls-7"
+                            cx="55.48"
+                            cy="453.93"
+                            rx="22.06"
+                            ry="36.04"
+                            transform="translate(-107.9 26.8) rotate(-13.96)" />
+                        <ellipse
+                            class="cls-7"
+                            cx="444.52"
+                            cy="453.93"
+                            rx="36.04"
+                            ry="22.06"
+                            transform="translate(-103.27 775.77) rotate(-76.04)" />
+                        <path
+                            class="cls-7"
+                            d="M454,419.29c-.27-.08-.5-.26-.78-.33l.82.2Z" />
+                        <path
+                            class="cls-7"
+                            d="M436.64,489.11l-.82-.2c.28.07.57,0,.85.07Z" />
+                        <path
+                            class="cls-7"
+                            d="M33.44,351.71a36,36,0,0,1,43.67-26.28L453.22,419c-11.83-2.94-25.31,10.33-30.11,29.65s.89,37.36,12.71,40.3L59.72,395.39A36,36,0,0,1,33.44,351.71Z" />
+                        <path
+                            class="cls-7"
+                            d="M64.18,488.91,250,442.7,100.64,405.56,46.78,419c11.83-2.94,25.31,10.33,30.11,29.65S76,486,64.18,488.91Z" />
+                        <path
+                            class="cls-7"
+                            d="M466.56,351.71a36,36,0,0,0-43.67-26.28L250,368.42l149.36,37.14,40.92-10.17A36,36,0,0,0,466.56,351.71Z" />
+                    </svg>
                     <ul>
-                        <li>header link one</li>
-                        <li>header link two</li>
-                        <li>header link three</li>
+                        <a
+                            href="https://mr-dionysus.github.io/HTML-CSS-Landing-Page"
+                            ><li>First Link</li></a
+                        >
+                        <a
+                            href="https://mr-dionysus.github.io/HTML-CSS-Landing-Page/"
+                            ><li>Second Link</li></a
+                        >
+                        <a
+                            href="https://mr-dionysus.github.io/HTML-CSS-Landing-Page/"
+                            ><li>Third Link</li></a
+                        >
                     </ul>
                 </header>
+
                 <section class="under-header">
                     <section class="under-header-sign-up">
                         <h1>This website is awesome</h1>
                         <p>
                             This website has some subtext that goes here under
                             the main title. It's a smaller font and the color is
-                            lower contrast
+                            lower contrast.
                         </p>
                         <button>Sign Up</button>
                     </section>
+
                     <img
                         src="https://images.unsplash.com/photo-1568702846914-96b305d2aaeb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80"
                         alt=""
@@ -35,35 +163,40 @@
                 </section>
             </div>
         </div>
+
         <div>
-            <h2>Some random information.</h2>
+            <h2>Some random information</h2>
             <section class="random-info">
                 <div>
                     <img
                         src="https://images.unsplash.com/photo-1568702846914-96b305d2aaeb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80"
                         alt="" />
-                    <p>this is some subtext under an illustration or image</p>
+                    <p>This is some subtext under an illustration or image.</p>
                 </div>
+
                 <div>
                     <img
                         src="https://images.unsplash.com/photo-1568702846914-96b305d2aaeb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80"
                         alt="" />
-                    <p>this is some subtext under an illustration or image</p>
+                    <p>This is some subtext under an illustration or image.</p>
                 </div>
+
                 <div>
                     <img
                         src="https://images.unsplash.com/photo-1568702846914-96b305d2aaeb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80"
                         alt="" />
-                    <p>this is some subtext under an illustration or image</p>
+                    <p>This is some subtext under an illustration or image.</p>
                 </div>
+
                 <div>
                     <img
                         src="https://images.unsplash.com/photo-1568702846914-96b305d2aaeb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80"
                         alt="" />
-                    <p>this is some subtext under an illustration or image</p>
+                    <p>This is some subtext under an illustration or image.</p>
                 </div>
             </section>
         </div>
+
         <div class="review-bg">
             <section class="review">
                 <p>
@@ -72,9 +205,10 @@
                     will actually read it. Who knows? All I know is that it
                     looks nice.
                 </p>
-                <span> -Thor, God of Thunder</span>
+                <span> - Thor, God of Thunder</span>
             </section>
         </div>
+
         <section class="call-to-action-box">
             <section class="call-to-action">
                 <h3>Call to action! It's time!</h3>
@@ -83,8 +217,11 @@
                     there!
                 </p>
             </section>
-            <button>Sign Up</button>
+            <a href="https://mr-dionysus.github.io/HTML-CSS-Landing-Page"
+                ><button>Sign Up</button></a
+            >
         </section>
+
         <footer>
             <section>Copyright © The Odin Project 2023</section>
         </footer>
